tests/derive_compile_fail/lifetime_struct_rejected.rs
use snowflake_connector_rs::FromRow;

#[derive(FromRow)]
struct Bad<'a> {
    value: &'a str,
}

fn main() {}
